# tagid-rs

./: .gitignore  Cargo.toml  README.md  justfile
src/: label.rs  labeling.rs  lib.rs
src/envelope/: envelope.rs  metadata.rs  mod.rs
src/id/: cuid.rs  gen.rs  generator.rs  id.rs  mod.rs  ulid.rs  uuid.rs
src/id/snowflake/: gen.rs  generator.rs  mod.rs  node.rs  pretty.rs
src/id/snowflake/pretty/: codec.rs  damm.rs  prettifier.rs
tagid-derive/: Cargo.toml  README.md
tagid-derive/src/: lib.rs
