[package]
name = "tagid"
version = "0.1.3"
edition = "2021"
description = """\
Defines a newtype tagging for CUID2 ids.
"""
repository = "https://github.com/dmrolfs/tagid-rs"
readme = "README.md"
license = "MIT"
keywords = ["id", "cuid", "distributed", "snowflake", "uuid"]
categories = ["algorithms", "data-structures", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["derive", "cuid"]
derive = ["tagid-derive"]
cuid = ["cuid2"]
snowflake = ["rs-snowflake"]
envelope = ["iso8601-timestamp"]
functional = ["frunk"]

[dependencies]
cuid2 = { optional = true, version = "0" }
uuid = { optional = true, version = "1", features = ["serde", "v4",] }
rs-snowflake = { optional = true, version = "0" }

tagid-derive = { path = "tagid-derive", optional = true }
disintegrate = { version = "0", optional = true }
sqlx = "0.7.3"
frunk = { optional = true, version = "0" }
iso8601-timestamp = { optional = true, version = "0", default-features = true }
itertools = "0"
once_cell = "1"
pretty-type-name = "1"
serde = { version = "1", features = ["derive"] }
smol_str = "0"
strum = "0"
strum_macros = "0"
tailcall = "0"
thiserror = "1"
validator = { version = "0", features = ["derive"] }

[dev-dependencies]
claim = "0.5.0"
criterion = { version = "0.4.0", features = ["html_reports"] }
pretty_assertions = "1.3.0"
pprof = { version = "0.11.0", features = ["flamegraph"] }
serde_test = { version = "1.0.152" }
serde_json = "1.0.93"
static_assertions = "1.1.0"

#[[bench]]
#name = "bench_main"
#harness = false
