[package]
name = "tagid"
version = "0.4.0"
edition = "2024"
authors = ["Damon Rolfs <drolfs@gmail.com>"]
description = "Defines a newtype labeled tagging for different types of ids."
license = "MIT"
repository = "https://github.com/dmrolfs/tagid-rs"
homepage = "https://github.com/dmrolfs/tagid-rs"
documentation = "https://docs.rs/tagid"
readme = "README.md"
keywords = ["identifier", "id", "cuid", "snowflake", "uuid"]
categories = ["data-structures", "development-tools"]

[lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_compatibility = { level = "warn", priority = -1 }
rust_2021_incompatible_closure_captures = "warn"
rust_2021_prelude_collisions = "warn"

[lints.clippy]
cargo = "warn"
suspicious = "warn"

[workspace]
resolver = "2"

[features]
default = ["derive", "with-cuid"]
derive = ["tagid-derive"]
envelope = ["iso8601-timestamp"]
functional = ["frunk"]
with-uuid = ["uuid"]
with-cuid = ["cuid2"]
with-ulid = ["ulid"]
with-snowflake = ["rs-snowflake"]

[dependencies]
cuid2 = { optional = true, version = "^0.1" }
uuid = { optional = true, version = "^1.13", features = ["serde", "v4",] }
rs-snowflake = { optional = true, version = "^0.6" }
ulid = { optional = true, version = "^1.2", features = ["serde",]}

tagid-derive = { version = "^0.2", optional = true }
#disintegrate = { version = "^2.0", optional = true }
disintegrate = { path =  "../../rust/disintegrate/disintegrate", optional = true }
sqlx = {  version = "^0.8", features = ["postgres", "uuid"], optional = true }
frunk = { optional = true, version = "^0.4" }
iso8601-timestamp = { optional = true, version = "^0.3", default-features = true }
itertools = "^0.14"
once_cell = "^1.20"
pretty-type-name = "^1.0"
rand = "^0.9"
serde = { version = "^1.0", features = ["derive"] }
smol_str = { version = "^0.3", default-features = true, features = ["serde"] }
strum = "^0.27"
strum_macros = "^0.27"
tailcall = "^1.0"
thiserror = "^2.0"
validator = { version = "^0.18", features = ["derive"] }

[dev-dependencies]
assert_matches2 = "0.1"
pretty_assertions = "1.4"
serde_test = { version = "1.0" }
serde_json = "1.0"
static_assertions = "1.1"

criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.14", features = ["flamegraph"] }

#[[bench]]
#name = "bench_main"
#harness = false
